Project Auth {
  database_type: 'PostgreSQL'
  Note: '''
    # Database of Auth API
  '''
}

Table group as G {
  id uuid [pk, default: `gen_random_uuid()`]
  
  name varchar [not null]
  
  active bool [not null, default: true]
}

Table user as U {
  id uuid [pk, default: `gen_random_uuid()`]
  
  group uuid [ref: > G.id, not null]
  
  email varchar [not null]
  name varchar [not null]
  pass varchar [not null]
  
  active bool [not null, default: true]
}

Table system as S {
  id uuid [pk, default: `gen_random_uuid()`]
  
  name varchar [not null]
  tables varchar[]
  
  active bool [not null, default: true]
}

Table access as A {
  id uuid [pk, default: `gen_random_uuid()`]
  
  system uuid [ref: > S.id, not null]
  
  table varchar [unique, not null]
  type varchar[]
}

Table session as SE {
  id uuid [pk, default: `gen_random_uuid()`]

  user uuid [ref: > U.id, not null]

  token varchar [not null]
  ip varchar [not null]
  agent varchar [not null]

  created_at timestamptz [not null, default: `now()`]
  expires_at timestamptz [not null]
}

ref: G.id <> A.id
ref: U.id <> A.id